# SmoothLineSegment

./: CMakeLists.txt  main.cpp
data/: picking_list.txt
matlab/: plotPickingList.m
